# ImageKernelProcessingPC

./: .gitignore  CMakeLists.txt  README.md
common/: image.cpp  image.h
cpuConvolution/: CMakeLists.txt
cpuConvolution/src/: convolution.cpp  convolution.h  main.cpp  taskLoader.cpp  taskLoader.h  timer.cpp  timer.h  utilities.cpp  utilities.h
gpuConvolution/: CMakeLists.txt
gpuConvolution/src/: buffer.cu  buffer.cuh  convolution.cu  convolution.cuh  main.cu  stream.cu  stream.cuh  taskLoader.cu  taskLoader.cuh  timer.cu  timer.cuh  utilities.cu  utilities.cuh
src/: buffer.cu  convolution.cpp  convolution.cu  convolution.cuh  convolution.h  image.cpp  image.h  main.cpp  mainCuda.cu  stream.cu  taskLoader.cpp  taskLoader.h  timer.cpp  timer.cuh  utilities.cpp
